/*
 * Copyright 2020 Square Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";

package squareup.proto3;

message CamelCase {
  message NestedCamelCase {
    int32 one_int32 = 1;
  }

  NestedCamelCase nested__message = 1;

  repeated int32 _Rep_int32 = 2;

  string IDitIt_my_wAy = 3;

  map<int32, int32> map_int32_Int32 = 4;
}
